@@ -1,0 +1,75 @@
+<?php
+/**
+ * @package     Joomla.Platform
+ * @subpackage  Form
+ *
+ * @copyright   Copyright (C) 2005 - 2013 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+defined('JPATH_PLATFORM') or die;
+
+/**
+ * Form Field class for the Joomla Platform.
+ * Supports a one line text field.
+ *
+ * @package     Joomla.Platform
+ * @subpackage  Form
+ * @link        http://www.w3.org/TR/html-markup/input.text.html#input.text
+ * @since       11.1
+ */
+class JFormFieldNote extends JFormField
+{
+	/**
+	 * The form field type.
+	 *
+	 * @var    string
+	 *
+	 * @since  11.1
+	 */
+	protected $type = 'Note';
+
+	/**
+	 * Method to get the field label markup.
+	 *
+	 * @return  string  The field label markup.
+	 *
+	 * @since   11.1
+	 */
+	protected function getLabel()
+	{
+		if (empty($this->element['label']) && empty($this->element['description']))
+		{
+			return '';
+		}
+
+		$title = $this->element['label'] ? (string) $this->element['label'] : ($this->element['title'] ? (string) $this->element['title'] : '');
+		$heading = $this->element['heading'] ? (string) $this->element['heading'] : 'h4';
+		$description = (string) $this->element['description'];
+		$class = $this->element['class'] ? ' class="' . trim((string) $this->element['class']) . '"' : '';
+		$close = (string) $this->element['close'];
+
+		$html = array();
+		if ($close)
+		{
+			$close = $close == 'true' ? 'alert' : $close;
+			$html[] = '<button type="button" class="close" data-dismiss="' . $close . '">&times;</button>';
+		}
+		$html[] = !empty($title) ? '<' . $heading . '>' . JText::_($title) . '</' . $heading . '>' : '';
+		$html[] = !empty($description) ? JText::_($description) : '';
+
+		return '</div><div ' . $class . '>' . implode('', $html);
+	}
+
+	/**
+	 * Method to get the field input markup.
+	 *
+	 * @return  string  The field input markup.
+	 *
+	 * @since   11.1
+	 */
+	protected function getInput()
+	{
+		return '';
+	}
+}
